fix: validar que exista cliente antes de crear cuenta